@@ -1,4 +1,9 @@
 
+2015-03-17  Yasuhiro Ohara  <yasu@nttv6.jp>
+
+	* src/bgpdump_data.c: bug fix for udiffs of '(' prefixes.
+	* script/search_prefix_name.sh: resolve IP addr to AS Descr.
+
 2015-03-14  Yasuhiro Ohara  <yasu@nttv6.jp>
 
 	* script/compare-peer-with-others*.sh: scripts to compare
